[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bababel"
version = "0.1.0"
description = "A messaging consumer library for handling and processing messages efficiently."
authors = [{name = "GustavoDelaiOnzi", email = "gustavodelai11@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "pika>=1.3.2"
]
urls = { "Homepage" = "https://github.com/GustavoDelaiOnzi/bababel" }
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "flake8>=7.1.1",
    "black>=25.1.0",
    "isort>=6.0.0",
    "commitizen>=4.2.1",
    "pre-commit>=4.1.0",
]

[tool.setuptools]
packages = ["bababel"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
